# apo-adk-cli

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/plans/: 2026-02-28-apo-implementation-plan.md  2026-02-28-apo-prompt-optimizer-design.md
examples/: sample_dataset.json  sample_prompt.txt
src/apo/: __init__.py
src/apo/cli/: commands.py
src/apo/core/: config.py  optimizer.py  rollout.py  vertex_auth.py
src/apo/data/: loader.py
src/apo/evaluation/: llm_judge.py  reference.py  scorer.py
tests/: test_integration.py  test_loader.py  test_scoring.py  test_vertex.py
