[project]
name = "ai-prompt-optimizer"
version = "0.1.0"
description = "Automatic Prompt Optimization using APO algorithm"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agentlightning[apo]",
    "google-adk",
    "google-auth",
    "litellm",
    "openai",
    "click",
    "rich",
    "python-dotenv",
]

[project.scripts]
apo = "apo.cli.commands:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apo"]
